[package]
name = "SentinelNotify"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Mandombe <jopaulo142@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = "0.11"
reqwest = { version = "0.11", features = ["blocking"] }